--- a/app/index.html
+++ b/app/index.html
@@ -1901,10 +1901,8 @@
 <div canvas="container">
 	<div class="container">
 		<div class="row">
+			<h2 class="text_center">Фильтр элементов</h2>
 			<div id="container">
-
-			</div>
-			<div id="container2">
 
 			</div>
 		</div>
