--- a/app/index.html
+++ b/app/index.html
@@ -1901,7 +1901,7 @@
 <div canvas="container">
 	<div class="container">
 		<div class="row">
-			<h2 class="text_center">Фильтр элементов</h2>
+			<h2 class="title_h2 text_center">Фильтр элементов</h2>
 			<div id="container">
 
 			</div>
